--- a/app/src/main/res/layout/activity_google_recaptcha_verify.xml
+++ b/app/src/main/res/layout/activity_google_recaptcha_verify.xml
@@ -10,17 +10,17 @@
     <include layout="@layout/layout_toolbar" />
 
 
-    <android.support.v7.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="开始验证" />
 
-    <android.support.v7.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_clean"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="清除WebView缓存" />
+        android:text="@string/webview" />
 
     <TextView
         android:id="@+id/tv_info"
