--- a/app/src/main/res/layout/activity_browse9_porn.xml
+++ b/app/src/main/res/layout/activity_browse9_porn.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     tools:context="com.u9porn.ui.porn9forum.browse9forum.Browse9PForumActivity">
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,9 +17,9 @@
             android:id="@+id/webview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_function"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
