--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -10,7 +10,7 @@
 
     <include layout="@layout/layout_toolbar" />
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/download_tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,7 +20,7 @@
         app:tabTextColor="@color/qmui_config_color_gray_5"
         app:tabTextAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/download_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
