--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/common_background"
-    tools:context="com.u9porn.ui.favoriteJsonResult.FavoriteActivity">
+    tools:context=".ui.porn9video.favorite.FavoriteActivity">
     <include layout="@layout/layout_toolbar" />
 
     <com.aitsuki.swipe.SwipeMenuRecyclerView
