--- a/app/src/main/res/layout/activity_play_pav.xml
+++ b/app/src/main/res/layout/activity_play_pav.xml
@@ -15,7 +15,7 @@
         <include layout="@layout/playback_engine_exo_media" />
     </FrameLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
