--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,7 +7,7 @@
     android:background="@color/common_background"
     tools:context="com.u9porn.ui.porn9video.search.SearchActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -21,11 +21,11 @@
             android:layout_height="match_parent">
 
 
-            <android.support.v7.widget.SearchView
+            <androidx.appcompat.widget.SearchView
                 android:id="@+id/search_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_toLeftOf="@+id/nice_spinner_search" />
+                android:layout_toStartOf="@+id/nice_spinner_search" />
 
             <org.angmarch.views.NiceSpinner
                 android:id="@+id/nice_spinner_search"
@@ -34,10 +34,9 @@
                 app:textTint="@color/common_always_white_text_color"
                 app:hideArrow="true"
                 app:backgroundSelector="@color/colorPrimary"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true" />
+                android:layout_alignParentEnd="true" />
         </RelativeLayout>
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,7 +52,7 @@
             app:backgroundSelector="@color/common_background"
             android:layout_margin="2dp" />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
