--- a/app/src/main/res/layout/activity_search_axgle_video.xml
+++ b/app/src/main/res/layout/activity_search_axgle_video.xml
@@ -8,7 +8,7 @@
     android:background="@color/common_background"
     tools:context=".ui.axgle.search.SearchAxgleVideoActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -21,14 +21,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <android.support.v7.widget.SearchView
+            <androidx.appcompat.widget.SearchView
                 android:id="@+id/search_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_toStartOf="@+id/checkbox_search_jav_video"
                 android:layout_toLeftOf="@+id/checkbox_search_jav_video" />
 
-            <android.support.v7.widget.AppCompatCheckBox
+            <androidx.appcompat.widget.AppCompatCheckBox
                 android:id="@+id/checkbox_search_jav_video"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -38,9 +38,9 @@
                 android:text="@string/search_jav_video"
                 />
         </RelativeLayout>
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_search_axgle_video"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
