--- a/app/src/main/res/layout/fragment_base_main.xml
+++ b/app/src/main/res/layout/fragment_base_main.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary">
 
-        <android.support.design.widget.TabLayout
+        <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
             app:tabSelectedTextColor="@android:color/white"
             app:tabTextColor="@color/LightGray" />
 
-        <android.support.v7.widget.AppCompatImageButton
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/iv_sort_category"
             android:layout_width="55dp"
             android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
             app:srcCompat="@drawable/ic_sort" />
     </RelativeLayout>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
