--- a/app/src/main/res/layout/fragment_finish.xml
+++ b/app/src/main/res/layout/fragment_finish.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:context="com.u9porn.ui.download.FinishedFragment">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_download_finish"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
