--- a/app/src/main/res/layout/fragment_forum9_index.xml
+++ b/app/src/main/res/layout/fragment_forum9_index.xml
@@ -5,15 +5,15 @@
     android:background="@color/common_background"
     tools:context="com.u9porn.ui.porn9forum.Forum9IndexFragment">
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </FrameLayout>
