--- a/app/src/main/res/layout/item_forum_9_porn.xml
+++ b/app/src/main/res/layout/item_forum_9_porn.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:padding="2dp">
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_item_forum_91_porn_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
