--- a/app/src/main/res/layout/item_v_9porn.xml
+++ b/app/src/main/res/layout/item_v_9porn.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="90dp"
@@ -20,17 +20,16 @@
             android:id="@+id/iv_91porn_item_img"
             android:layout_width="120dp"
             android:layout_height="90dp"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:scaleType="fitXY" />
 
-        <android.support.v7.widget.AppCompatTextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_91porn_item_title"
             android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:layout_toRightOf="@+id/iv_91porn_item_img"
-            android:paddingLeft="5dp"
+            android:layout_toEndOf="@+id/iv_91porn_item_img"
+            android:paddingStart="5dp"
             android:textColor="@color/item_v9pron_title_text_color"
             android:textStyle="bold"
             app:autoSizeMaxTextSize="16sp"
@@ -38,20 +37,20 @@
             app:autoSizeStepGranularity="1sp"
             app:autoSizeTextType="uniform"
             />
-        <android.support.v4.widget.Space
+        <androidx.legacy.widget.Space
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:layout_toRightOf="@+id/iv_91porn_item_img"
+            android:layout_toEndOf="@+id/iv_91porn_item_img"
             android:layout_below="@+id/tv_91porn_item_title"
             android:layout_above="@+id/tv_91porn_item_info"
             />
-        <android.support.v7.widget.AppCompatTextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_91porn_item_info"
             android:layout_width="match_parent"
             android:layout_height="33dp"
             android:layout_alignBottom="@+id/iv_91porn_item_img"
-            android:layout_toRightOf="@+id/iv_91porn_item_img"
-            android:paddingLeft="5dp"
+            android:layout_toEndOf="@+id/iv_91porn_item_img"
+            android:paddingStart="5dp"
             android:textColor="@color/item_v9pron_info_text_color"
             app:autoSizeMaxTextSize="14sp"
             app:autoSizeMinTextSize="10sp"
@@ -59,4 +58,4 @@
             app:autoSizeTextType="uniform"
              />
     </RelativeLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
