--- a/app/src/main/res/layout/layout_popuwindow_sort_category.xml
+++ b/app/src/main/res/layout/layout_popuwindow_sort_category.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/common_background">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_sort_category"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
