--- a/app/src/main/res/layout/layout_pron9_video_skip_page.xml
+++ b/app/src/main/res/layout/layout_pron9_video_skip_page.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_skip_page_height">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_skip_page"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
